# HUXForm

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  idea.md  nginx.conf  playwright.config.ts  pyproject.toml  response.json
.agui/: mcp.json.example
.github/workflows/: ci.yml  docker.yml
.omc/state/: agent-replay-28858fa7-71ae-4fa6-9223-6e532b63af5f.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/sessions/28858fa7-71ae-4fa6-9223-6e532b63af5f/: hud-state.json
apps/api/: pyproject.toml
apps/api/src/: __init__.py  audit.py  codegen.py  config.py  director.py  discovery.py  executor.py  llm.py  main.py  mcp_client.py  mission.py  models.py  narrator.py  openapi_adapter.py  osv.py  persistence.py  planner.py  presets.py  researcher.py  routes.py  runtime.py  runtime_stub.py  tasks.py  tools.py  voice.py  web_search.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  Turn.tsx  api.ts  bridge.ts  index.css  mic.ts  styles.css
apps/web/src/components/: ActionButton.tsx  ActionCard.tsx  ChatInterface.tsx  FormRenderer.tsx  HistorySidebar.tsx  ListView.tsx  LoadingSpinner.tsx  MessageBubble.tsx  Renderer.tsx  Section.tsx  SessionSelector.tsx  StatCard.tsx  TextBlock.tsx  UIDocumentRenderer.tsx  UISchemaViewer.tsx  UserInput.tsx  neumorphic.tsx  registry.tsx
demo/: huxform-demo.html
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  index.html
workspace/: .keep
(+7 files in other folders)
