[project]
name = "huxform-api"
version = "0.3.0"
description = "HUXForm — generative human-experience runtime. The interface takes the shape of the task."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "sse-starlette>=2.0.0",
  "python-multipart>=0.0.9",
  "ddgs>=6.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
